# Virtual-Memory-Managment

./: Aging.cpp  Aging.h  CMakeLists.txt  Clock.cpp  Clock.h  Fifo.cpp  Fifo.h  Frame.cpp  Frame.h  NRU.cpp  NRU.h  PageTable.cpp  PageTable.h  Pager.cpp  Pager.h  Process.cpp  Process.h  Random.cpp  Random.h  Vmas.cpp  Vmas.h  WorkingSet.cpp  WorkingSet.h  input.txt  main.cpp  makefile
lab3_assign/scripts/: gradeit.sh
